--- a/CSS-Day-05/style.css
+++ b/CSS-Day-05/style.css
@@ -1,3 +1,11 @@
-h1{
-    color: red;
+h2{
+    color:orange;
+}
+button{
+    background-color: blue;
+    color: white;
+}
+p{ 
+    background-color: black;
+    color: white;
 }
