--- a/CSS-Day-05/style.css
+++ b/CSS-Day-05/style.css
@@ -1,11 +1,11 @@
-h2{
-    color:orange;
-}
-button{
-    background-color: blue;
-    color: white;
-}
-p{ 
-    background-color: black;
-    color: white;
+h1{
+    font-family: league spartan;
+    color: #ffa511;
+    text-align: center;
+    font-size:55px ;
+    font-weight: 900;
+    letter-spacing: 2px;
+    line-height: 1.5px;
+    text-decoration: teal double underline;
+    text-transform: uppercase;
 }
