--- a/07-CSS-Day-07/style3.css
+++ b/07-CSS-Day-07/style3.css
@@ -8,3 +8,14 @@
     margin-left: 2em;
     padding: 1em;
 }
+.box{
+    height: 100px;
+    width: 100px;
+    background-color: pink;
+    border: 2px solid black;
+    border-radius: 50%;
+    display: inline-block;
+}
+li{
+    display: inline;
+}
