--- a/08-CSS-Day-08/style1.css
+++ b/08-CSS-Day-08/style1.css
@@ -6,7 +6,7 @@ div{
     height: 50px;
     text-align: center;
     background-color: #7aa874;
-    border: 2px solid black;
+  
     margin: 10px;
 }
 
@@ -20,4 +20,8 @@ div:nth-of-type(3n){
 /* transform */
 #one{
     transform: rotate(45deg);
+}
+
+#four{
+    box-shadow: 5px 5px 10px black;
 }
