--- a/08-CSS-Day-08/style4.css
+++ b/08-CSS-Day-08/style4.css
@@ -7,3 +7,8 @@
     #box1:hover {
     width: 600px;
     }
+    #box2 {
+        width: 100px;
+        height: 100px;
+        background: red;
+    }
