--- a/08-CSS-Day-08/style4.css
+++ b/08-CSS-Day-08/style4.css
@@ -11,4 +11,6 @@
         width: 100px;
         height: 100px;
         background: red;
+        transform: rotate(90deg);
+        transform: translate(200px,200px);
     }
