--- a/08-CSS-Day-08/style4.css
+++ b/08-CSS-Day-08/style4.css
@@ -20,3 +20,20 @@
         background: lightblue;
         transform: skew(-20deg);
         }
+
+        #box4 {
+            width: 100px;
+            height: 100px;
+            background: lightgreen;
+            box-shadow: 2px 2px 5px green;
+            }
+
+            #myPic {
+                width: 200px;
+                height: 200px;
+                background: pink;
+                background-image: url("download.png");
+                background-size: cover;
+                opacity: 50%
+                }
+                
