--- a/09-CSS-Day-09/style.css
+++ b/09-CSS-Day-09/style.css
@@ -5,14 +5,16 @@
     margin: 10px auto;
     border: 2px solid black;
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
+    justify-content:start;
+    justify-content: space-between;
 }
 h1{
     text-align: center;
 }
 #container div {
-    height: 200px;
-    width: 300px;
+    height: 100px;
+    width: 50px;
     color: white;
     text-align: center;
     font-size: 1.5em;
