--- a/09-CSS-Day-09/style.css
+++ b/09-CSS-Day-09/style.css
@@ -1,20 +1,20 @@
 #container{
-    height: 500px;
+    height: 400px;
     width: 80%;
     background-color: azure;
     margin: 10px auto;
     border: 2px solid black;
     display: flex;
-    flex-direction: row-reverse;
-    justify-content:start;
-    justify-content: space-between;
+    flex-direction: column;
+    /* justify-content:start;
+    justify-content: space-between; */
 }
 h1{
     text-align: center;
 }
 #container div {
     height: 100px;
-    width: 50px;
+    width: 100px;
     color: white;
     text-align: center;
     font-size: 1.5em;
