--- a/09-CSS-Day-09/style.css
+++ b/09-CSS-Day-09/style.css
@@ -10,13 +10,14 @@
     justify-content: space-between; */
     flex-wrap: nowrap;
     flex-wrap: wrap;
+    align-content: flex-end;
 }
 h1{
     text-align: center;
 }
 #container div {
-    height: 100px;
-    width: 100px;
+    height: 50px;
+    width: 200px;
     color: white;
     text-align: center;
     font-size: 1.5em;
