--- a/09-CSS-Day-09/style1.css
+++ b/09-CSS-Day-09/style1.css
@@ -3,6 +3,7 @@
     width: 400px;
     border: 2px solid lightseagreen;
     background-color: white;
+    border-radius: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
