--- a/10-CSS-Day-10/style.css
+++ b/10-CSS-Day-10/style.css
@@ -3,9 +3,9 @@
     height: 300px;
     background-color:red;
     display: grid;
-    grid-template-rows: 50px 50px 50px 50px 50px;
-    grid-template-columns: 100px 100px 100px 100px 100px;
-}
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+
 .item{
     width: 100px;
     height: 50px;
