--- a/10-CSS-Day-10/style.css
+++ b/10-CSS-Day-10/style.css
@@ -6,7 +6,7 @@
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-gap: 10px 30px;
-
+}
 .item{
     width: 100px;
     height: 50px;
