--- a/10-CSS-Day-10/style5.css
+++ b/10-CSS-Day-10/style5.css
@@ -1,7 +1,7 @@
 .loader{
     border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid goldenrod;
+    border-top: 16px solid black;
     width: 120px;
     height: 120px;
     animation: spin 2s linear infinite;
@@ -11,7 +11,7 @@
     transform: rotate(0deg);
      }
      100% {
-    transform: rotate(360deg); 
+    transform: rotate(360deg);  
       }
 
 }
