--- a/11-CSS-Day-11/style.css
+++ b/11-CSS-Day-11/style.css
@@ -25,4 +25,14 @@
     background-color: rgba(255,255,255,0.1);
     box-shadow: 0 0 6px rgba(255,255,255,0.6);
 }
+.sidebar_menu .logo{
+    position: absolute;
+    width: 100%;
+    line-height: 60px;
+    box-shadow: 0 0 6px rgba(255,255,255,0.6);
+
+}
+.sidebar_menu .logo a{
+    
+}
 
