--- a/11-CSS-Day-11/style.css
+++ b/11-CSS-Day-11/style.css
@@ -32,7 +32,11 @@
     box-shadow: 0 0 6px rgba(255,255,255,0.6);
 
 }
-.sidebar_menu .logo a{
-    
+.sidebar_menu .logo a {
+    position: absolute;
+    color: whitesmoke;
+    left: 50px;
+    text-decoration: none;
+
 }
 
