--- a/11-CSS-Day-11/style.css
+++ b/11-CSS-Day-11/style.css
@@ -37,6 +37,20 @@
     color: whitesmoke;
     left: 50px;
     text-decoration: none;
+    font-size: 20px;
+    font-weight: 700;
+}
+.sidebar_menu .btn_two {
+color: gray;
+font-size: 30px;
+line-height: 60px;
+position: absolute;
+left: 250px;
+}
+.sidebar_menu .menu {
+position: absolute;
+width: 100%;
+top: 80px;
 
 }
 
