--- a/11-CSS-Day-11/style.css
+++ b/11-CSS-Day-11/style.css
@@ -16,6 +16,7 @@
     position: absolute;
     left: 16px;
     line-height: 60px;
+    cursor: pointer;
 }
 .sidebar_menu{
     position: fixed;
@@ -40,13 +41,14 @@
     font-size: 20px;
     font-weight: 700;
 }
-.sidebar_menu .btn_two {
+.sidebar_menu .btn_two i {
 color: gray;
-font-size: 30px;
+font-size: 20px;
 line-height: 60px;
 position: absolute;
 left: 250px;
-opacity: 0;
+/* opacity: 0; */
+cursor: pointer;
 
 }
 .sidebar_menu .menu {
@@ -78,4 +80,21 @@ top: 80px;
 }
 #check{
     display: none;
+}
+.sidebar_menu .menu li:hover{
+    box-shadow: 0 0 6px rgba(255,255,255,0.6);
+
+}
+
+.btn_one i:hover{
+font-size: 30px;
+}
+
+.btn_two i:hover{
+    font-size: 30px;
+}
+.sidebar_menu .social_media i:hover{
+    opacity: 1;
+   transform: scale(1.5);
+
 }
