--- a/11-CSS-Day-11/style.css
+++ b/11-CSS-Day-11/style.css
@@ -9,28 +9,31 @@
     background-size: cover;
     
 }
-.btn_one{
+.btn_one i {
     color: white;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 700;
     position: absolute;
     left: 16px;
     line-height: 60px;
     cursor: pointer;
+    transition: all 0.3s linear;
 }
 .sidebar_menu{
     position: fixed;
-    /* left: -300px; */
+    left: -300px;
     height: 100vh;
     width: 300px;
     background-color: rgba(255,255,255,0.1);
     box-shadow: 0 0 6px rgba(255,255,255,0.6);
+    transition: all 0.3s linear;
 }
 .sidebar_menu .logo{
     position: absolute;
     width: 100%;
     line-height: 60px;
-    box-shadow: 0 0 6px rgba(255,255,255,0.6);
+    box-shadow: 0 2px 6px rgba(255,255,255,0.6);
+    height: 60px;
 
 }
 .sidebar_menu .logo a {
@@ -47,8 +50,9 @@ font-size: 20px;
 line-height: 60px;
 position: absolute;
 left: 250px;
-/* opacity: 0; */
+opacity: 0;
 cursor: pointer;
+transition: all 0.3s linear;
 
 }
 .sidebar_menu .menu {
@@ -98,3 +102,13 @@ font-size: 30px;
    transform: scale(1.5);
 
 }
+#check:checked ~ .sidebar_menu{
+    left: 0;
+}
+#check:checked ~ .btn_one i {
+    opacity: 0;
+}
+#check:checked ~ .sidebar_menu .btn_two i {
+    opacity: 1;
+}
+
