--- a/13-CSS-Day-13(project)/style.css
+++ b/13-CSS-Day-13(project)/style.css
@@ -12,15 +12,17 @@
     height: 100vh;
 }
 .side-bar{
-    background-color: red;
+    background-color: #121212;
     width: 340px;
+    border-radius: 1rem;
 }
 .main-content{
-    background-color: blue;
+    background-color:#121212;
     flex: 1;
+    border-radius: 1rem;
 }
 .music-Player{
-    background-color: yellow;
+    background-color: #121212;
     bottom: 0;
     position: fixed;
     width: 100%;
