--- a/13-CSS-Day-13(project)/style.css
+++ b/13-CSS-Day-13(project)/style.css
@@ -1,10 +1,8 @@
 *{
     font-family: 'Montserrat', sans-serif;
     margin: 0;
-    background-color: black;
     color: white;
     overflow: hidden;
-
 
 }
 .main{
@@ -12,9 +10,8 @@
     height: 100vh;
 }
 .side-bar{
-    background-color: #121212;
+    background-color:green;
     width: 340px;
-    border-radius: 1rem;
 }
 .main-content{
     background-color:#121212;
@@ -23,9 +20,37 @@
     overflow: auto;
 }
 .music-Player{
-    background-color: #121212;
+    background-color: black;
     bottom: 0;
     position: fixed;
     width: 100%;
     height: 72px;
+}
+a{
+    text-decoration: none;
+    color: white;
+}
+.nav{
+    background-color:#121212;
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100px;
+    padding: 0.5rem 0.75rem;
+}
+.nav-option{
+    line-height: 2.5rem;
+    opacity: 0.7;
+    padding: 0.5rem 0.75rem;
+}
+.nav-option:hover{
+    opacity: 1;
+}
+.nav-option i {
+    font-size: 1.25rem;
+}
+.nav-option a {
+    font-size: 1.25rem;
+    margin-left: 1rem;
 }
