--- a/13-CSS-Day-13(project)/style.css
+++ b/13-CSS-Day-13(project)/style.css
@@ -54,3 +54,18 @@ a{
     font-size: 1.25rem;
     margin-left: 1rem;
 }
+.Library{
+    background-color: #121212;
+    border-radius: 1rem;
+    height: 100%;
+    margin-top: 0.5rem;
+    padding: 0.5rem 0.75rem;
+}
+.options{
+    display: flex;
+    justify-content: space-between;
+}
+.lib-option img {
+    height: 1.25rem;
+    width: 1.25rem;
+}
