--- a/13-CSS-Day-13(project)/style.css
+++ b/13-CSS-Day-13(project)/style.css
@@ -64,8 +64,20 @@ a{
 .options{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 .lib-option img {
     height: 1.25rem;
     width: 1.25rem;
+}
+.icons{
+    font-size: 1.25rem;
+    display: flex;
+}
+.icons i {
+    opacity: 0.7;
+    margin-right: 1rem;
+}
+.icons i:hover{
+    opacity: 1;
 }
