--- a/13-CSS-Day-13(project)/style.css
+++ b/13-CSS-Day-13(project)/style.css
@@ -3,15 +3,19 @@
     margin: 0;
     color: white;
     overflow: hidden;
+    background-color: black;
 
 }
 .main{
     display: flex;
     height: 100vh;
+    padding: 0.5rem;
 }
 .side-bar{
-    background-color:green;
+    background-color:black;
     width: 340px;
+    border-radius: 1rem;
+    margin-right: 0.5rem;
 }
 .main-content{
     background-color:#121212;
@@ -80,4 +84,29 @@ a{
 }
 .icons i:hover{
     opacity: 1;
+}
+.box{
+    background-color: #232323;
+    height: 8rem;
+    border-radius: 0.75rem;
+    margin: 0.5rem 0 0.5rem 0;
+    padding: 0.75rem 1rem;
+}
+.box-p1{
+    font-size: 1rem;
+    font-weight: 500;
+}
+.box-p2{
+    font-size: 0.85rem;
+    opacity: 0.9;
+}
+.badge{
+    background-color: #fff;
+    border: none;
+    border-radius: 100px;
+    padding: 0.25rem 1rem;
+    font-weight: 700;
+    margin-top: 0.5rem;
+    height: 2rem;
+
 }
