--- a/13-CSS-Day-13(project)/style.css
+++ b/13-CSS-Day-13(project)/style.css
@@ -93,10 +93,12 @@ a{
     padding: 0.75rem 1rem;
 }
 .box-p1{
+    background-color: #232323;
     font-size: 1rem;
     font-weight: 500;
 }
 .box-p2{
+    background-color: #232323;
     font-size: 0.85rem;
     opacity: 0.9;
 }
