--- a/13-CSS-Day-13(project)/style.css
+++ b/13-CSS-Day-13(project)/style.css
@@ -125,4 +125,7 @@ a{
     position: sticky;
     top: 0;
     background-color:#121212;
+    display: flex;
+     justify-content: space-between;
+
 }
