--- a/13-CSS-Day-13(project)/style.css
+++ b/13-CSS-Day-13(project)/style.css
@@ -22,6 +22,7 @@
     flex: 1;
     border-radius: 1rem;
     overflow: auto;
+    padding: 0 1.5rem 0 1.5rem;
 }
 .music-Player{
     background-color: black;
@@ -155,4 +156,18 @@ a{
     .hide{
         display: none;
     }
+}
+
+.card{
+    background-color: #232323;
+    width: 150px;
+    border-radius: 0.5rem;
+    padding: 1rem;
+}
+.cards-container{
+    display: flex;
+}
+.card-img{
+    width: 100%;
+    border-radius: 0.5rem;
 }
