--- a/13-CSS-Day-13(project)/style.css
+++ b/13-CSS-Day-13(project)/style.css
@@ -93,6 +93,9 @@ a{
 .icons i:hover{
     opacity: 1;
 }
+.Lib-box{
+    background-color: #121212;
+}
 .box{
     background-color: #232323;
     height: 8rem;
@@ -165,9 +168,19 @@ a{
     padding: 1rem;
 }
 .cards-container{
+    background-color: #121212;
     display: flex;
 }
 .card-img{
     width: 100%;
     border-radius: 0.5rem;
+}
+.card-title{
+    background-color:#232323;
+    font-weight: 600;
+}
+.card-info{
+    background-color: #232323;
+    font-size: 0.75rem;
+    opacity: 0.7;
 }
