--- a/13-CSS-Day-13(project)/style.css
+++ b/13-CSS-Day-13(project)/style.css
@@ -166,10 +166,13 @@ a{
     width: 150px;
     border-radius: 0.5rem;
     padding: 1rem;
+    margin-left: 1.5rem;
+    margin-top: 1rem;
 }
 .cards-container{
     background-color: #121212;
     display: flex;
+    flex-wrap: wrap;
 }
 .card-img{
     width: 100%;
