--- a/13-CSS-Day-13(project)/style.css
+++ b/13-CSS-Day-13(project)/style.css
@@ -25,7 +25,7 @@
     padding: 0 1.5rem 0 1.5rem;
 }
 .music-Player{
-    background-color: black;
+    background-color:black;
     bottom: 0;
     position: fixed;
     width: 100%;
@@ -203,23 +203,52 @@ a{
     opacity: 0.4;
      
 }
-.music-player{
+.music-Player{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 .album{
     width: 25%;
-    background-color: green;
 }
 .player{
+    background-color: #121212;
     width: 50%;
-    background-color: orange;
 }
 .controls{
     width: 25%;
-    background-color: aqua;
+}
+.player-controls{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .player-control-icon{
-    height: 20px;
+    height: 1rem;
+    margin-right: 1.5rem;
+    opacity: 0.7;
+}
+.playback-bar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.progress-bar{
+    width: 70% ;
+    appearance: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+.progress-bar::-webkit-slider-runnable-track {
+    background-color: #ddd;
+    border-radius: 100px;
+    height: 0.25rem;
+}
+.progress-bar::-webkit-slider-thumb {
+    appearance: none;
+    height: 1rem;
+    width: 1rem;
+    background-color: #1bd760;
+    border-radius: 50%;
+    margin-top: -6px;
 }
