--- a/13-CSS-Day-13(project)/style.css
+++ b/13-CSS-Day-13(project)/style.css
@@ -252,3 +252,28 @@ a{
     border-radius: 50%;
     margin-top: -6px;
 }
+.album-player{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.album-img{
+    width: 25%;
+    height: 25%;
+    padding: 2rem;
+    margin-right:1rem;
+    border-radius: 1.5rem;
+}
+.love{
+    font-weight: 600;
+}
+.shubh{
+    font-size: 0.75rem;
+    opacity: 0.7;
+}
+.title-player{
+    margin-right:1rem
+}
+.title1{
+    margin-right:1rem
+}
