--- a/13-CSS-Day-13(project)/style.css
+++ b/13-CSS-Day-13(project)/style.css
@@ -258,10 +258,10 @@ a{
     align-items: center;
 }
 .album-img{
-    width: 25%;
-    height: 25%;
+    width: 15%;
+    height: 50px;
     padding: 2rem;
-    margin-right:1rem;
+    margin-right:0.5rem;
     border-radius: 1.5rem;
 }
 .love{
