--- a/32-Node-js(EJSDIR)-Day-32/views/error.ejs
+++ b/32-Node-js(EJSDIR)-Day-32/views/error.ejs
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rolldice</title>
+    <title>Error</title>
 </head>
 <body>
-    <h1>your dice gave value:<%=diceval%></h1> 
-    <%if(diceval==6){%>
-        <h2>Nice! Roll dice Again</h2>
-   <% }%>
+    <h3>no data found!<%=username%></h3>
 </body>
 </html>
