--- a/32-Node-js(EJSDIR)-Day-32/views/rolldice.ejs
+++ b/32-Node-js(EJSDIR)-Day-32/views/rolldice.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rolldice</title>
-</head>
+<%- include('includes/head'); %>.
 <body>
     <h1>your dice gave value:<%=diceval%></h1> 
     <%if(diceval==6){%>
