--- a/32-Node-js(EJSDIR)-Day-32/views/instragram.ejs
+++ b/32-Node-js(EJSDIR)-Day-32/views/instragram.ejs
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        img{
-            height: 100px;
-            width: 100px;
-        }
-    </style>
-</head>
+<%- include("includes/head.ejs");%>
 <body>
     <h3>This page belongs to <%=data.name%></h3>
     <button>Follow</button>
