--- a/40-MongoDB-Day-40/views/index.ejs
+++ b/40-MongoDB-Day-40/views/index.ejs
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h3>All Chats!</h3>
+    <form method="GET" action="/chats/new">
+        <button >New Chat</button>
+    </form>
     <%for(let chat of chats ){%>
         <div class="chat">
             <p>from: <i><%=chat.from%></i></p>
