--- a/40-MongoDB-Day-40/views/new.ejs
+++ b/40-MongoDB-Day-40/views/new.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h3>write new chat</h3>
-    <form>
+    <form method="post" action="/chats">
         <input placeholder="who are you ?" name="from"/>
         <br> <br>
         <textarea name="message"> write your message here..</textarea>
