--- a/40-MongoDB-Day-40/views/index.ejs
+++ b/40-MongoDB-Day-40/views/index.ejs
@@ -20,6 +20,8 @@
                 <p><%=chat.message%></p>
             </div>
             <p>Received by: <i><%=chat.to%></i></p>
+            <p><%=chat.Created_at.toString().split(" ")[4]%></p>
+            <p><%=chat.Created_at.toString().split(" ").slice(0, 4).join("-")%></p>
         </div>
     </hr>
         <br> <br>
