--- a/40-MongoDB-Day-40/views/index.ejs
+++ b/40-MongoDB-Day-40/views/index.ejs
@@ -18,6 +18,9 @@
             <p>from: <i><%=chat.from%></i></p>
             <div class="msg">
                 <p><%=chat.message%></p>
+                <form method="GET" action="/chats/<%=chat._id%>/edit"> 
+                    <button>Edit</button>
+                </form>
             </div>
             <p>Received by: <i><%=chat.to%></i></p>
             <p><%=chat.Created_at.toString().split(" ")[4]%></p>
@@ -25,7 +28,7 @@
         </div>
     </hr>
         <br> <br>
-        <%}%>
+        <%}%> 
 </body>
 </html>
 
