--- a/42-Major-Project(part-2)-Day-42/public/css/style.css
+++ b/42-Major-Project(part-2)-Day-42/public/css/style.css
@@ -1,8 +1,13 @@
 body{
     font-family: "plus jakarta Sans",sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
-
+.container{
+    flex: 1;
+}
 /* navbar */
 .navbar{
     height: 5rem;
@@ -75,4 +80,22 @@ body{
 .card-img-overlay:hover{
     opacity: 0.2;
     background-color: white;
+}
+
+/* new.ejs */
+.btn-color{
+    background-color: #fe424d !important;
+    border: none !important;
+}
+
+/* show page */
+.show-img{
+    height: 30vh;
+}
+.btns{
+    display: flex;
+}
+.show-card{
+    padding-left: 0;
+    padding-right: 0;
 }
