--- a/42-Major-Project(part-2)-Day-42/views/listings/new.ejs
+++ b/42-Major-Project(part-2)-Day-42/views/listings/new.ejs
@@ -1,37 +1,65 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WanderLust</title>
-  </head>
-  <body>
-    <h3>Create a New Listing</h3>
+<%layout("/layouts/boilerplate")%>
+    <div class="row">
+      <div class="col-8 offset-2">
+        <h3>Create a New Listing</h3>
+      </br></br>
     <form method="POST" action="/listings">
-      <input name="listing[title]" placeholder="enter title" type="text" />
-      <br /><br />
-      <textarea
+     <div class="mb-3">
+      <label for="title" class="form-label">Title</label>
+      <input name="listing[title]"
+       placeholder="Add a catchy title" 
+       type="text"
+       class="form-control"/>
+     </div>
+      <!-- <br /><br /> -->
+      <div class="mb-3">
+        <label for="description" class="form-label">Description</label>
+        <textarea
         name="listing[description]"
-        placeholder="enter description"
+        class="form-control"
       ></textarea>
-      <br /><br />
+      </div>
+      <!-- <br /><br /> -->
+     <div class="mb-3">
+      <label for="image" class="form-label">Image Link</label>
       <input
-        name="listing[image]"
-        placeholder="enter image URL/Link"
-        type="text"
-      />
-      <br /><br />
-      <input name="listing[price]" placeholder="enter price" type="number" />
-      <br /><br />
-      <input name="listing[country]" placeholder="enter country" type="text" />
-      <br /><br />
-      <input
+      name="listing[image]"
+      placeholder="enter image URL/Link"
+      type="text"
+      class="form-control"
+    />
+     </div>
+      <!-- <br /><br /> -->
+     <div class="row">
+      <div class="mb-3 col-md-4" >
+        <label for="price" class="form-label">Price</label>
+        <input name="listing[price]" 
+        placeholder="1400"
+        type="number"
+        class="form-control" />
+      </div>
+      <!-- <br /><br /> -->
+      <div class="mb-3 col-md-8">
+        <label for="country" class="form-label">country</label>
+        <input name="listing[country]"
+         placeholder="India"
+          type="text"
+          class="form-control" />
+      </div>
+     </div>
+      <!-- <br /><br /> -->
+      <div class="mb-3">
+        <label for="location" class="form-label">Location</label>
+        <input
         name="listing[location]"
-        placeholder="enter location"
+        placeholder="Patna,Bihar"
         type="text"
+        class="form-control"
       />
-      <br /><br />
-      <button>Add</button>
+      </div>
+      <!-- <br /><br /> -->
+      <button type="submit" class="btn btn-dark btn-color mt-3" >Add</button>
+    </br></br>
     </form>
-  </body>
-</html>
+      </div>
+    </div>
