--- a/56-React-Day-56/basic-react-app/src/Product.css
+++ b/56-React-Day-56/basic-react-app/src/Product.css
@@ -1,5 +1,5 @@
 .Product{
-    border: 1px solid white;
+    border: 1px solid black;
     border-radius: 15px;
     margin-bottom: 10px;
     padding: 0 10px 0 10px;
