--- a/57-React-Day-57/basic-react-app/src/Product.css
+++ b/57-React-Day-57/basic-react-app/src/Product.css
@@ -2,5 +2,7 @@
     border: 1px solid black;
     border-radius: 15px;
     margin-bottom: 10px;
-    padding: 0 10px 0 10px;
+    margin-left: 15px;
+    width: 200px;
+    height: 160px;
 }
