--- a/62-React-Day-62/mini-project-react/src/SearchBox.css
+++ b/62-React-Day-62/mini-project-react/src/SearchBox.css
@@ -1,4 +1,7 @@
 .searchbox{
     text-align: center;
+    text-wrap: wrap;
+    height: 100px;
+    color: aliceblue;
     /* background-color: red; */
 }
