--- a/62-React-Day-62/mini-project-react/src/infoBox.css
+++ b/62-React-Day-62/mini-project-react/src/infoBox.css
@@ -1,8 +1,9 @@
 .InfoBox{
     text-align: center;
+    margin-left: 40px;
 }
 .cardcontainer{
     display: flex;
     justify-content:center;
 
-}
+} 
